example-applications/live-demo/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec: # deployment specification
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec: # pod-specification
      volumes:
        - name: html-data
          persistentVolumeClaim:
            claimName: nginx-volume
      containers:
        - name: nginx
          image: nginx:latest # do not use latest in production!!!!
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: html-data
          resources:
            requests:
              cpu: 100m
              memory: 50Mi
            limits:
              cpu: 500m
              memory: 250Mi
          livenessProbe:
            httpGet:
              port: 80
              path: /
              scheme: HTTP
            initialDelaySeconds: 5 # after start wait X before
            # first check
            periodSeconds: 10 # check every 10 seconds
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /
              scheme: HTTP
            initialDelaySeconds: 5 # after start wait X before
                                   # first check
            periodSeconds: 10 # check every 10 seconds
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 2
