example-applications/live-demo/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  type: ClusterIP # not needed: default is ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: web
  selector:
    app: nginx
